# advent-of-fpga-2025

./: .gitignore  .ocamlformat  LICENSE  README.md  build.sh  dune-project
src/: build.ml  day_eleven.ml  day_one.ml  day_seven.ml  dune
test/: day_one_small.input  dune  test_day_eleven.ml  test_day_one.ml  test_day_seven.ml
