(library
 (name advent_of_fpga_2025)
 (public_name advent_of_fpga_2025)
 (modules day_one day_seven)
 (libraries core core_unix hardcaml hardcaml_circuits)
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executable
 (name build)
 (public_name build)
 (modules build)
 (libraries advent_of_fpga_2025 core core_unix hardcaml hardcaml_circuits))
